# RobotAgentClient

./: .gitignore
behaviac3.6.39/: CMakeLists.txt
behaviac3.6.39/exported/behaviac_generated/types/internal/: RobotAgent.cpp  RobotAgent.h  behaviac_agent_headers.h  behaviac_agent_meta.cpp  behaviac_agent_meta.h
behaviac3.6.39/lib/: libbehaviac_msvc_debug.exp  libbehaviac_msvc_debug.lib  libbehaviac_msvc_release.exp
behaviac3.6.39/projects/vs2019/: .gitignore
behaviac3.6.39/workspace/: robotclient.workspace.xml
behaviac3.6.39/workspace/behaviors/: SayHello.xml
behaviac3.6.39/workspace/behaviors/behaviac_meta/: robotclient.meta.xml
behaviac3.6.39/workspace/exported/meta/: robotclient.meta.xml
exe/: .gitignore  robotclient.exe~HEAD  robotclient.ilk~HEAD
exe/exported/: SayHello.xml
testclient/: CMakeLists.txt  README.md
testclient/include/: Config.h  EventSystem.h  MesgHead.h  RobotAgent.h  RobotAgentEnum.h  RobotAgentManager.h  Singleton.h  SocketServer.h  baselink.h  robot_entity.h
testclient/src/: EventSystem.cpp  RobotAgent.cpp  RobotAgentManager.cpp  main.cpp  robot_entity.cpp
testclient/src/SocketNetwork/: Epoll.cpp  SocketServer.cpp  baselink.cpp
testclient/winproject/: .gitignore
